adding search to action bar and navigation component

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PicPro</string>
+    <string name="search_hint"> Pesquisar por imagem</string>
 </resources>
