creating navigation when search is initiated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">PicPro</string>
     <string name="search_hint"> Pesquisar por imagem</string>
+    <string name="no_result">No result found</string>
 </resources>
